# knot

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
demo/knot-test/: review-knot.md  sample-document.md  stub-pi.sh
docs/: api-reference.md  concepts.md  design-guide.md  getting-started.md  release-notes.md  troubleshooting.md
docs/configuration/: knots.md  profiles.md  rig-structure.md
docs/workflows/: file-generation-workflow.md  review-workflow.md
project/: .loom-log  domain-glossary.md
project/adrs/: adr-001-integration-test-server-pattern.md  adr-002-server-child-tasks.md  adr-003-channel-cascade-shutdown.md  adr-004-shared-agent-profiles.md  adr-005-skill-integration-testing.md  adr-006-file-first-configuration.md  adr-007-stdin-only-agent-invocation.md  adr-008-full-file-first-state.md  adr-009-agent-specific-adapters.md  adr-010-domain-rule-extraction.md  master-adrs.md
rig/: state.json
src/: .loom-log  lib.rs  main.rs  server.rs
tests/: .loom-log  adapter_integration.rs  agent_integration.rs  auto_discovery_and_knot_crud.rs  axum_server_test_integration.rs  composition.rs  demo.rs  discovery.rs  filesystem_interface.rs  generic_task_management.rs  git_versioning.rs  helpers.rs  http_interface.rs  integration-test-overview.md  integration.rs  loom_crud.rs  multi_loom.rs  pipeline.rs  profile_timeout.rs  rig_cli.rs  rig_discovery.rs  rig_lifecycle.rs  rig_log.rs  server_startup_smoke.rs  session_resume.rs  shared_agent_profiles.rs  shutdown.rs  skill_e2e.rs  skill_integration.rs  swagger_ui.rs  task_management.rs  tie_off.rs
(+131 files in other folders)
