[package]
name = "knot"
version = "0.20.2"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
notify = "7"
content_inspector = "0.2"
libc = "0.2"
zip = "0.6"

[dev-dependencies]
tempfile = "3"
zip = "0.6"
